--- a/public/media/art/index.html
+++ b/public/media/art/index.html
@@ -578,33 +578,33 @@ document.addEventListener("DOMContentLoaded", function() {
   
     
     <button class="img-btn" 
-          data-full-src="/images/art/heartBeatemup.png" 
+          data-full-src="/images/art/heartbeatemup.png" 
           data-caption="Heart Beatemup (2022) - Acrylic on canvas">
-    <img src="/images/art/heartBeatemup.png" >
+    <img src="/images/art/heartbeatemup.png" >
     <div><h5>Heart Beatemup</h5></div>
   </button>
  
 
     <button class="img-btn" 
-          data-full-src="/images/art/Unrequited.jpeg" 
+          data-full-src="/images/art/unrequited.jpeg" 
           data-caption="Unrequited (2022) - Acrylic on canvas">
-    <img src="/images/art/Unrequited.jpeg" >
+    <img src="/images/art/unrequited.jpeg" >
     <div><h5>Unrequited</h5></div>
   </button>
    
    
     <button class="img-btn" 
-          data-full-src="/images/art/Hummingbird.jpeg" 
+          data-full-src="/images/art/hummingbird.jpeg" 
           data-caption="Hummingbird (2022) - Acrylic on canvas">
-    <img src="/images/art/Hummingbird.jpeg" >
+    <img src="/images/art/hummingbird.jpeg" >
     <div><h5>Hummingbird</h5></div>
   </button>
   
   
 	<button class="img-btn" 
-          data-full-src="/images/art/Tanooki.jpeg" 
+          data-full-src="/images/art/tanooki.jpeg" 
           data-caption="Tanooki (2022) - Acrylic on canvas">
-    <img src="/images/art/Tanooki.jpeg" >
+    <img src="/images/art/tanooki.jpeg" >
     <div><h5>Tanooki</h5></div>
   </button>
    
@@ -624,23 +624,23 @@ document.addEventListener("DOMContentLoaded", function() {
   </button>
   
       <button class="img-btn" 
-          data-full-src="/images/art/Bearface.jpeg" 
+          data-full-src="/images/art/bearface.jpeg" 
           data-caption="Bear Face (2022) - Acrylic on canvas">
-    <img src="/images/art/Bearface.jpeg" >
+    <img src="/images/art/bearface.jpeg" >
     <div><h5>Bear Face</h5></div>
   </button>  
   
       <button class="img-btn" 
-          data-full-src="/images/art/Octopus.jpeg" 
+          data-full-src="/images/art/octopus.jpeg" 
           data-caption="Octopus (2022) - Acrylic on canvas">
-    <img src="/images/art/Octopus.jpeg" >
+    <img src="/images/art/octopus.jpeg" >
     <div><h5>Octopus</h5></div>
   </button>
      
       <button class="img-btn" 
-          data-full-src="/images/art/Heaven.jpeg" 
+          data-full-src="/images/art/heaven.jpeg" 
           data-caption="Heaven (2022) - Oil & Acrylic on canvas">
-    <img src="/images/art/Heaven.jpeg" >
+    <img src="/images/art/heaven.jpeg" >
     <div><h5>Heaven</h5></div>
   </button>
               </div>
