--- a/public/media/art/index.html
+++ b/public/media/art/index.html
@@ -1037,16 +1037,16 @@ document.addEventListener("DOMContentLoaded", function() {
   </button>
   
   <button class="img-btn" 
-          data-full-src="/images/art/3kEYKINGDOM_PNG.PNG" 
+          data-full-src="/images/art/3key.png" 
           data-caption="'Three Key Kingdom' Poster [D6H-T1P-9TG on Mario Maker 2] (2021)">
-    <img src="/images/art/3kEYKINGDOM_PNG.PNG" >
+    <img src="/images/art/3key.png" >
     <div><h5>Three Key Kingdom</h5></div>
   </button>
 
   <button class="img-btn" 
-          data-full-src="/images/art/masterball_druox_render.PNG" 
+          data-full-src="/images/art/masterball.png" 
           data-caption="'Into the Masterball' Cover Art (2025)">
-    <img src="/images/art/masterball_druox_render.PNG" >
+    <img src="/images/art/masterball.png" >
     <div><h5>Into the Masterball</h5></div>
   </button>
               </div>
