--- a/content/media/animation/animation01.html
+++ b/content/media/animation/animation01.html
@@ -109,12 +109,7 @@
     <img src="https://img.youtube.com/vi/QhCTpdNPFIk/hqdefault.jpg" alt="Time Travel">
     <div><h5>Time Travel</h5></div>
   </button>
-    
-    <button class="video-btn" data-video-id="904d8c29-9734-4b2e-b5b5-3d680f74d379" data-platform="dtube">
-    <img src="https://media.d.tube/frames/904d8c29-9734-4b2e-b5b5-3d680f74d379/3.jpg">
-    <div> <h5>7th Hour Stretch</h5></div>
-  </button>
-  
+     
     <button class="video-btn" data-video-id="47a894ea-4b0c-4af1-b894-5b743cf0ceb7" data-platform="dtube">
     <img src="https://media.d.tube/frames/47a894ea-4b0c-4af1-b894-5b743cf0ceb7/1.jpg">
     <div> <h5>MARIO vs BOWSER</h5></div>
@@ -125,16 +120,6 @@
     <div> <h5>StopMotion01</h5></div>
   </button>
 
-      <button class="video-btn" data-video-id="9A096QfOB4o">
-    <img src="https://img.youtube.com/vi/9A096QfOB4o/hqdefault.jpg" alt="Toooucan">
-    <div><h5>Toooucan</h5></div>
-  </button>
-  
-    <button class="video-btn" data-video-id="kxnG5fjj_1U">
-    <img src="https://img.youtube.com/vi/kxnG5fjj_1U/hqdefault.jpg" alt="Matt Tentacle">
-    <div><h5>Matt Vargas Visits the Tentacle</h5></div>
-  </button>
-
     <button class="video-btn" data-video-id="xgJU9xkEAT4">
     <img src="https://img.youtube.com/vi/xgJU9xkEAT4/hqdefault.jpg" alt="Life of Shy Guy">
     <div><h5>Matt Vargas's "Life of Shy Guy"</h5></div>
@@ -143,6 +128,11 @@
   <button class="video-btn" data-video-id="31303e45-9576-43fe-8dac-b8bf927e03c2" data-platform="dtube">
     <img src="https://media.d.tube/frames/31303e45-9576-43fe-8dac-b8bf927e03c2/2.jpg">
     <div> <h5>freinds 3</h5></div>
+  </button>
+  
+    <button class="video-btn" data-video-id="6dba4753-37d2-4cc8-bba6-f9d9a8832131" data-platform="dtube">
+    <img src="https://media.d.tube/frames/6dba4753-37d2-4cc8-bba6-f9d9a8832131/2.jpg">
+    <div> <h5>Sight's Karaoke Jam!</h5></div>
   </button>
   
     <button class="video-btn" data-video-id="Rr-vs0KMAtY">
