--- a/content/media/animation/animation02.html
+++ b/content/media/animation/animation02.html
@@ -75,6 +75,11 @@
     <div><h5> Matty V Birthday Video - Parts 1&2</h5></div>
   </button>
   
+      <button class="video-btn" data-video-id="kxnG5fjj_1U">
+    <img src="https://img.youtube.com/vi/kxnG5fjj_1U/hqdefault.jpg" alt="Matt Tentacle">
+    <div><h5>Matt Vargas Visits the Tentacle</h5></div>
+  </button>
+  
     <button class="video-btn" data-video-id="5CQ8fyS0wZ0">
     <img src="https://img.youtube.com/vi/5CQ8fyS0wZ0/hqdefault.jpg" alt="Happy Birthday Cheat">
     <div><h5>Happy Birthday Cheat</h5></div>
