--- a/content/media/other/other03.html
+++ b/content/media/other/other03.html
@@ -70,7 +70,6 @@
     <div><h5>Quick Announcement 10/26</h5></div>
   </button>
   
-    
         <button class="video-btn" data-video-id="2LlWLkLQKyw">
     <img src="https://img.youtube.com/vi/2LlWLkLQKyw/hqdefault.jpg">
     <div><h5>2015 Update</h5></div>
@@ -81,14 +80,25 @@
     <div><h5>Shippiddge on YouTube</h5></div>
   </button>
   
-  
       <button class="video-btn" data-video-id="xCuQiAS7N5E">
     <img src="https://img.youtube.com/vi/xCuQiAS7N5E/hqdefault.jpg">
     <div><h5>Mario vs. Bowser Promo</h5></div>
   </button>
-
-
   
+       <button class="video-btn" data-video-id="9A096QfOB4o">
+    <img src="https://img.youtube.com/vi/9A096QfOB4o/hqdefault.jpg">
+    <div><h5>Toooucan</h5></div>
+  </button>     
+	 
+    <button class="video-btn" data-video-id="9447c910-c07c-45f6-85f2-3dafe64d08eb" data-platform="dtube">
+    <img src="https://media.d.tube/frames/9447c910-c07c-45f6-85f2-3dafe64d08eb/3.jpg">
+    <div> <h5>Bus Stop Trailer Thing</h5></div>
+  </button>
+
+         <button class="video-btn" data-video-id="fH6G2R1E_WI">
+    <img src="https://img.youtube.com/vi/fH6G2R1E_WI/hqdefault.jpg">
+    <div><h5>An Olimar's Best Friend - Announcement</h5></div>
+  </button>  
 
 
 </div>
