--- a/public/media/other/index.html
+++ b/public/media/other/index.html
@@ -819,7 +819,6 @@
     <div><h5>Quick Announcement 10/26</h5></div>
   </button>
   
-    
         <button class="video-btn" data-video-id="2LlWLkLQKyw">
     <img src="https://img.youtube.com/vi/2LlWLkLQKyw/hqdefault.jpg">
     <div><h5>2015 Update</h5></div>
@@ -830,126 +829,25 @@
     <div><h5>Shippiddge on YouTube</h5></div>
   </button>
   
-  
       <button class="video-btn" data-video-id="xCuQiAS7N5E">
     <img src="https://img.youtube.com/vi/xCuQiAS7N5E/hqdefault.jpg">
     <div><h5>Mario vs. Bowser Promo</h5></div>
   </button>
-
-
   
-
-
-</div>
-              </div>
-            </div>
-
-
-          </div>
-        </li>
-        
-        <li class="col-12 d-flex width-full py-4 border-bottom color-border-secondary public source">
-          <div class="col-12 d-inline-block">
-            <div class="d-inline-block mb-1">
-              <h3 class="wb-break-all">
-                <a href="/media/other/other04/"></a>
-              </h3>
-            </div>
-
-            <div>
-              <div class="col-12 d-inline-block pr-4">
-                <style>
-  /* Grid Layout: 
-     - 1 column on mobile
-     - 2 columns on tablets
-     - 4 columns on desktop 
-     - No external Bootstrap required (Theme Safe)
-  */
-  .starter-grid {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1.5rem;
-    margin-top: 2rem;
-  }
-
-  @media (min-width: 768px) {
-    .starter-grid { grid-template-columns: repeat(2, 1fr); }
-  }
-
-  @media (min-width: 1024px) {
-    .starter-grid { grid-template-columns: repeat(4, 1fr); }
-  }
-
-  /* Button Styling */
-  .video-btn {
-    width: 100%;
-    border: 0;
-    padding: 0;
-    cursor: pointer;
-    border-radius: 8px;
-    overflow: hidden;
-    background: #212529; /* Dark background to match dark mode */
-    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
-    transition: transform 0.2s;
-  }
-
-  .video-btn:hover {
-    transform: scale(1.02);
-  }
-
-  .video-btn img {
-    width: 100%;
-    display: block;
-    height: auto;
-  }
-
-  .video-btn div {
-    padding: 1rem;
-    text-align: left;
-    color: white;
-  }
-
-  .video-btn h5 {
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-
-</style>
-
-<h3 class="mb-4">BIRTHDAY VIDEOS</h3>
-<div class="starter-grid">
-
-
-      <button class="video-btn" data-video-id="S99KId4Eg0k">
-    <img src="https://img.youtube.com/vi/S99KId4Eg0k/hqdefault.jpg" alt="Happy Birthday Mimmy">
-    <div><h5>Happy Birthday Mimmy</h5></div>
-  </button>
-  
-        <button class="video-btn" data-video-id="my8OWvnAuL0">
-    <img src="https://img.youtube.com/vi/my8OWvnAuL0/hqdefault.jpg" alt="Happy Birthday Mimmy">
-    <div><h5>Happy Birthday Kip</h5></div>
-  </button>
-        <button class="video-btn" data-video-id="3sP0nHOXebc">
-    <img src="https://img.youtube.com/vi/3sP0nHOXebc/hqdefault.jpg" alt="Happy Birthday Mimmy">
-    <div><h5> Matty V Birthday Video - Parts 1&2</h5></div>
-  </button>
-  
-    <button class="video-btn" data-video-id="5CQ8fyS0wZ0">
-    <img src="https://img.youtube.com/vi/5CQ8fyS0wZ0/hqdefault.jpg" alt="Happy Birthday Cheat">
-    <div><h5>Happy Birthday Cheat</h5></div>
+       <button class="video-btn" data-video-id="9A096QfOB4o">
+    <img src="https://img.youtube.com/vi/9A096QfOB4o/hqdefault.jpg">
+    <div><h5>Toooucan</h5></div>
+  </button>     
+	 
+    <button class="video-btn" data-video-id="9447c910-c07c-45f6-85f2-3dafe64d08eb" data-platform="dtube">
+    <img src="https://media.d.tube/frames/9447c910-c07c-45f6-85f2-3dafe64d08eb/3.jpg">
+    <div> <h5>Bus Stop Trailer Thing</h5></div>
   </button>
 
-    <button class="video-btn" data-video-id="XUXIddTsijA">
-    <img src="https://img.youtube.com/vi/XUXIddTsijA/hqdefault.jpg" alt="Happy Birthday Future">
-    <div><h5>Happy Birthday Future</h5></div>
-  </button>
-  
-    <button class="video-btn" data-video-id="5OYFkrDLfe4">
-    <img src="https://img.youtube.com/vi/5OYFkrDLfe4/hqdefault.jpg" alt="Happy Birthday Shadow Fox">
-    <div><h5>Happy Birthday Shadow Fox</h5></div>
-  </button>
-  
+         <button class="video-btn" data-video-id="fH6G2R1E_WI">
+    <img src="https://img.youtube.com/vi/fH6G2R1E_WI/hqdefault.jpg">
+    <div><h5>An Olimar's Best Friend - Announcement</h5></div>
+  </button>  
 
 
 </div>
