--- a/content/media/other/other00.html
+++ b/content/media/other/other00.html
@@ -1,5 +1,5 @@
  <h1 style="text-align:center" style="font-family: 'Lucida Console'" >OTHER</h1>
-  <p class="mb-1"  style="text-align:center" >Miscellaneous Shippiddge works. Language/cringe warning for some of the older ones.</a> </p>
+  <p class="mb-1"  style="text-align:center" >Miscellaneous Shippiddge works.</a> </p>
 
 
 <!-- Big Video Player at the top -->
