--- a/content/media/other/other06.html
+++ b/content/media/other/other06.html
@@ -58,9 +58,16 @@
 
 </style>
 
-<h3 class="mb-4">CHILDHOOD CLASSICS</h3>
+<h3 class="mb-4">CHILDHOOD CLASSICS</h3>Videos from childhood.  Cringe and foul language warning.
 <div class="starter-grid">
 
+
+  
+              <button class="video-btn" data-video-id="QNjTkcFaUpg">
+    <img src="https://img.youtube.com/vi/QNjTkcFaUpg/hqdefault.jpg" alt="Shadow Ball">
+    <div><h5>Shadow Ball</h5></div>
+  </button>
+   
             <button class="video-btn" data-video-id="rdCS4SXrq7I">
     <img src="https://img.youtube.com/vi/rdCS4SXrq7I/hqdefault.jpg" alt="The Man Salad">
     <div><h5>The Man Salad</h5></div>
@@ -70,13 +77,6 @@
     <img src="https://img.youtube.com/vi/b0YPES1htNg/hqdefault.jpg" alt="The Greatest Swan Sighting of All Time ">
     <div><h5>The Greatest Swan Sighting of All Time</h5></div>
   </button>
-   
-  
-              <button class="video-btn" data-video-id="QNjTkcFaUpg">
-    <img src="https://img.youtube.com/vi/QNjTkcFaUpg/hqdefault.jpg" alt="Shadow Ball">
-    <div><h5>Shadow Ball</h5></div>
-  </button>
-   
    
                  <button class="video-btn" data-video-id="CTcu6-30Rdo">
     <img src="https://img.youtube.com/vi/CTcu6-30Rdo/hqdefault.jpg" alt="Different Tastes in Music">
