--- a/content/shop/shop.html
+++ b/content/shop/shop.html
@@ -1,5 +1,5 @@
 
-
+<h1  style="text-align:center; font-family: 'Lucida Console'">SHOP</h1><p style="text-align:center">Shippiddge merchandise is now available on Fourthwall.</p>
 <style>
 
   .starter-grid {
@@ -57,6 +57,7 @@
 
 
 </style>
+
 <h1  style="text-align:center; font-family: 'Lucida Console'">SHOP</h1><p style="text-align:center">Shippiddge merchandise is now available on Fourthwall.</p>
 <div class="starter-grid" id="product-grid"></div>
 
