--- a/content/media/comics/comics00.html
+++ b/content/media/comics/comics00.html
@@ -51,7 +51,7 @@
     transform: scale(1.02);
   }
 </style>
- <h1 style="text-align:center" style="font-family: 'Lucida Console'" >COMICS</h1>
+<h1 style="text-align:center; font-family: 'Lucida Console'">COMICS</h1>
  <br>
 <div id="bigPlayer" class="mb-4">
   
