--- a/content/media/other/other00.html
+++ b/content/media/other/other00.html
@@ -1,4 +1,4 @@
- <h1 style="text-align:center" style="font-family: 'Lucida Console'" >OTHER</h1>
+<h1 style="text-align:center; font-family: 'Lucida Console'">OTHER</h1>
   <p class="mb-1"  style="text-align:center" >Miscellaneous Shippiddge works.</a> </p>
 
 
