--- a/public/media/featuring/index.html
+++ b/public/media/featuring/index.html
@@ -334,7 +334,7 @@
 
             <div>
               <div class="col-12 d-inline-block pr-4">
-                <h1 style="text-align:center"  style="font-family: 'Lucida Console'">FEATURING SHIPPIDDGE</h1>
+                <h1 style="text-align:center; font-family: 'Lucida Console'">FEATURING SHIPPIDDGE</h1>
   <p class="mb-1"  style="text-align:center" >Various works that feature Shippiddge in the cast and/or crew.</a> </p>
 
 
