--- a/public/startersquad/index.html
+++ b/public/startersquad/index.html
@@ -335,7 +335,7 @@
             <div>
               <div class="col-12 d-inline-block pr-4">
                 <body>
- <h1 style="text-align:center" style="font-family: 'Lucida Console'">STARTER SQUAD</h1>
+<h1 style="text-align:center; font-family: 'Lucida Console'">STARTER SQUAD</h1>
 <p style="text-align:center"> 
 
  <b>Starter Squad</b> is an animated parody series starring the original starter Pokemon on their quest for evolution.  
