--- a/content/startersquad/startersquad00.html
+++ b/content/startersquad/startersquad00.html
@@ -1,6 +1,6 @@
 
 <body>
- <h1 style="text-align:center" style="font-family: 'Lucida Console'">STARTER SQUAD</h1>
+<h1 style="text-align:center; font-family: 'Lucida Console'">STARTER SQUAD</h1>
 <p style="text-align:center"> 
 
  <b>Starter Squad</b> is an animated parody series starring the original starter Pokemon on their quest for evolution.  
