--- a/public/media/art/index.html
+++ b/public/media/art/index.html
@@ -387,7 +387,7 @@
     transform: scale(1.02);
   }
 </style>
- <h1 style="text-align:center" style="font-family: 'Lucida Console'" >ART</h1>
+<h1 style="text-align:center; font-family: 'Lucida Console'">ART</h1>
  <br>
 <div id="bigPlayer" class="mb-4">
   
