--- a/public/media/other/index.html
+++ b/public/media/other/index.html
@@ -334,7 +334,7 @@
 
             <div>
               <div class="col-12 d-inline-block pr-4">
-                <h1 style="text-align:center" style="font-family: 'Lucida Console'" >OTHER</h1>
+                <h1 style="text-align:center; font-family: 'Lucida Console'">OTHER</h1>
   <p class="mb-1"  style="text-align:center" >Miscellaneous Shippiddge works.</a> </p>
 
 
