--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href='/css/light.css' />
     <link rel="stylesheet" href='/css/dark.css' />
     <link rel="stylesheet" href='/css/syntax.css' />
-    <title>404 Page not found - Shippiddge dot com</title>
+    <title>404 Page not found - Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
     
@@ -29,7 +29,7 @@
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="404 Page not found - Shippiddge dot com" />
+<meta name="twitter:title" content="404 Page not found - Shippiddge.com" />
 <meta name="twitter:description"
   content="" />
 <meta name="twitter:site" content="/" />
@@ -39,7 +39,7 @@
 
 
 <meta property="og:type" content="website" />
-<meta property="og:title" content="404 Page not found - Shippiddge dot com">
+<meta property="og:title" content="404 Page not found - Shippiddge.com">
 <meta property="og:description"
   content="" />
 <meta property="og:url" content="/404.html" />
