--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href='/css/light.css' />
     <link rel="stylesheet" href='/css/dark.css' />
     <link rel="stylesheet" href='/css/syntax.css' />
-    <title>Shippiddge dot com</title>
+    <title>Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
     
@@ -30,9 +30,9 @@
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Shippiddge dot com" />
+<meta name="twitter:title" content="Shippiddge.com" />
 <meta name="twitter:description"
-  content="Welcome to Shippiddge.com!" />
+  content="Starter Squad, Smashtasm, Sonic Logic, and more.  Picking at your nostalgia since 2006." />
 <meta name="twitter:site" content="/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
@@ -40,11 +40,11 @@
 
 
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Shippiddge dot com">
+<meta property="og:title" content="Shippiddge.com">
 <meta property="og:description"
-  content="Welcome to Shippiddge.com!" />
+  content="Starter Squad, Smashtasm, Sonic Logic, and more.  Picking at your nostalgia since 2006." />
 <meta property="og:url" content="/" />
-<meta property="og:site_name" content="Shippiddge dot com" />
+<meta property="og:site_name" content="Shippiddge.com" />
 <meta property="og:image"
   content="/images/shipp_logo_400.png">
 <meta property="og:image:width" content="2048">
@@ -53,7 +53,7 @@
 
 
 
-<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge dot com" />
+<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge.com" />
 
 
 
@@ -178,7 +178,7 @@
         </div>
 
         <div class="p-note user-profile-bio mb-3 js-user-profile-bio f4" style="font-family: 'Courier'">
-          <div>Welcome to Shippiddge.com!</div>
+          <div>Starter Squad, Smashtasm, Sonic Logic, and more.  Picking at your nostalgia since 2006.</div>
         </div>
 
         <div class="d-flex flex-column">
