--- a/public/media/featuring/index.html
+++ b/public/media/featuring/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href='/css/light.css' />
     <link rel="stylesheet" href='/css/dark.css' />
     <link rel="stylesheet" href='/css/syntax.css' />
-    <title>Featuring Shippiddge - Shippiddge dot com</title>
+    <title>Featuring Shippiddge - Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
     
@@ -29,7 +29,7 @@
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Featuring Shippiddge - Shippiddge dot com" />
+<meta name="twitter:title" content="Featuring Shippiddge - Shippiddge.com" />
 <meta name="twitter:description"
   content="" />
 <meta name="twitter:site" content="/" />
@@ -39,7 +39,7 @@
 
 
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Featuring Shippiddge - Shippiddge dot com">
+<meta property="og:title" content="Featuring Shippiddge - Shippiddge.com">
 <meta property="og:description"
   content="" />
 <meta property="og:url" content="/media/featuring/" />
@@ -52,7 +52,7 @@
 
 
 
-<link href="/media/featuring/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge dot com" />
+<link href="/media/featuring/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge.com" />
 
 
 
@@ -176,7 +176,7 @@
         </div>
 
         <div class="p-note user-profile-bio mb-3 js-user-profile-bio f4" style="font-family: 'Courier'">
-          <div>Welcome to Shippiddge.com!</div>
+          <div>Starter Squad, Smashtasm, Sonic Logic, and more.  Picking at your nostalgia since 2006.</div>
         </div>
 
         <div class="d-flex flex-column">
