--- a/content/media/other/other01.html
+++ b/content/media/other/other01.html
@@ -94,6 +94,11 @@
     <img src="https://img.youtube.com/vi/mVqJANWmh-Y/hqdefault.jpg">
     <div><h5>Sola Saminare</h5></div>
   </button>
+  
+            <button class="video-btn" data-video-id="84c5bd06-de5e-4f90-84ad-7d8db3bb5cd8" data-platform="dtube">
+    <img src="https://media.d.tube/frames/84c5bd06-de5e-4f90-84ad-7d8db3bb5cd8/4.jpg">
+    <div> <h5>Glados Sings Junk</h5></div>
+  </button>  
 
     <button class="video-btn" data-video-id="zXPCqPOe-bw">
     <img src="https://img.youtube.com/vi/zXPCqPOe-bw/hqdefault.jpg">
