--- a/content/media/other/other05.html
+++ b/content/media/other/other05.html
@@ -1,13 +1,13 @@
 <style>
   /* Grid Layout: 
-     - 1 column on mobile
+     - 2 column on mobile
      - 2 columns on tablets
      - 4 columns on desktop 
      - No external Bootstrap required (Theme Safe)
   */
   .starter-grid {
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
     margin-top: 2rem;
   }
@@ -55,20 +55,23 @@
     font-weight: 500;
   }
 
+
 </style>
 
-<h3 class="mb-4">Sonic X: The Repisensce Episodes (2006)</h3>A crude fandub of Sonic X. "Repisensce" is not a word.
+
+<body> <h2 class="mb-4">UNFINISHED</h2> </body>
+
 <div class="starter-grid">
 
-
-    <button class="video-btn" data-video-id="9b500a15-bd96-4837-839c-be1c24afc207" data-platform="dtube">
-    <img src="https://media.d.tube/frames/9b500a15-bd96-4837-839c-be1c24afc207/2.jpg">
-    <div> <h5>Sonic X Repisensce - Ep 1</h5></div>
+    <button class="video-btn" data-video-id="c8ad15b7-9ede-49a4-802a-ce1244296762" data-platform="dtube">
+    <img src="https://media.d.tube/frames/c8ad15b7-9ede-49a4-802a-ce1244296762/1.jpg">
+    <div> <h5>Unfinished Skyrim Sketch</h5></div>
   </button>
-      <button class="video-btn" data-video-id="3bda5651-186f-416d-b02f-9aaed3a3120a" data-platform="dtube">
-    <img src="https://media.d.tube/frames/3bda5651-186f-416d-b02f-9aaed3a3120a/1.jpg">
-    <div> <h5>Sonic X Repisensce - Ep 2</h5></div>
+      <button class="video-btn" data-video-id="30d50303-4fb7-4081-ba80-89869f074ec7" data-platform="dtube">
+    <img src="https://media.d.tube/frames/30d50303-4fb7-4081-ba80-89869f074ec7/3.jpg">
+    <div> <h5>Unfinished Grant & Gront Sequel</h5></div>
   </button>
+  
   
 
 </div>
