--- a/content/media/other/other06.html
+++ b/content/media/other/other06.html
@@ -55,91 +55,20 @@
     font-weight: 500;
   }
 
-
 </style>
 
-<h3 class="mb-4">CHILDHOOD CLASSICS</h3>Videos from childhood.  Cringe and foul language warning.
+<h3 class="mb-4">Sonic X: The Repisensce Episodes (2006)</h3>A crude fandub of Sonic X. "Repisensce" is not a word.
 <div class="starter-grid">
 
 
-  
-              <button class="video-btn" data-video-id="QNjTkcFaUpg">
-    <img src="https://img.youtube.com/vi/QNjTkcFaUpg/hqdefault.jpg" alt="Shadow Ball">
-    <div><h5>Shadow Ball</h5></div>
+    <button class="video-btn" data-video-id="9b500a15-bd96-4837-839c-be1c24afc207" data-platform="dtube">
+    <img src="https://media.d.tube/frames/9b500a15-bd96-4837-839c-be1c24afc207/2.jpg">
+    <div> <h5>Sonic X Repisensce - Ep 1</h5></div>
   </button>
-   
-            <button class="video-btn" data-video-id="rdCS4SXrq7I">
-    <img src="https://img.youtube.com/vi/rdCS4SXrq7I/hqdefault.jpg" alt="The Man Salad">
-    <div><h5>The Man Salad</h5></div>
+      <button class="video-btn" data-video-id="3bda5651-186f-416d-b02f-9aaed3a3120a" data-platform="dtube">
+    <img src="https://media.d.tube/frames/3bda5651-186f-416d-b02f-9aaed3a3120a/1.jpg">
+    <div> <h5>Sonic X Repisensce - Ep 2</h5></div>
   </button>
   
-                <button class="video-btn" data-video-id="b0YPES1htNg">
-    <img src="https://img.youtube.com/vi/b0YPES1htNg/hqdefault.jpg" alt="The Greatest Swan Sighting of All Time ">
-    <div><h5>The Greatest Swan Sighting of All Time</h5></div>
-  </button>
-   
-                 <button class="video-btn" data-video-id="CTcu6-30Rdo">
-    <img src="https://img.youtube.com/vi/CTcu6-30Rdo/hqdefault.jpg" alt="Different Tastes in Music">
-    <div><h5>Different Tastes in Music</h5></div>
-  </button>
-   
-   
-            <button class="video-btn" data-video-id="m-h-wAvdQvQ">
-    <img src="https://img.youtube.com/vi/m-h-wAvdQvQ/hqdefault.jpg" alt="Sam Ornella's Guide to Extreme Birdwatching">
-    <div><h5>Sam Ornella's Guide to Extreme Birdwatching</h5></div>
-  </button>
-  
-          <button class="video-btn" data-video-id="FFM08h7KJOA">
-    <img src="https://img.youtube.com/vi/FFM08h7KJOA/hqdefault.jpg" alt="Sorry Bill!">
-    <div><h5>Sorry Bill!</h5></div>
-  </button>
-  
-        <button class="video-btn" data-video-id="4UK0oM8BLeU">
-    <img src="https://img.youtube.com/vi/4UK0oM8BLeU/hqdefault.jpg" alt="Visual Puns">
-    <div><h5>Visual Puns</h5></div>
-  </button>
-  
-        <button class="video-btn" data-video-id="FyPbaQTVAeY">
-    <img src="https://img.youtube.com/vi/FyPbaQTVAeY/hqdefault.jpg" alt="A Walk with the Bluejays">
-    <div><h5>A Walk with the Bluejays</h5></div>
-  </button>
-  
-            <button class="video-btn" data-video-id="maUPuCW4Ssg">
-    <img src="https://img.youtube.com/vi/maUPuCW4Ssg/hqdefault.jpg" alt="Brawl Delays">
-    <div><h5>Brawl Delays</h5></div>
-  </button>
-  
-            <button class="video-btn" data-video-id="owfJWXgx8sc">
-    <img src="https://img.youtube.com/vi/owfJWXgx8sc/hqdefault.jpg" alt="How to be a Voice Actor">
-    <div><h5>How to be a Voice Actor</h5></div>
-  </button>
-  
-          <button class="video-btn" data-video-id="udvLE-y3uHc">
-    <img src="https://img.youtube.com/vi/udvLE-y3uHc/hqdefault.jpg" alt="Rickroll'd iPhones">
-    <div><h5>Rickroll'd iPhones</h5></div>
-  </button>
-    
-  
-        <button class="video-btn" data-video-id="WYDYRqHpmU4">
-    <img src="https://img.youtube.com/vi/WYDYRqHpmU4/hqdefault.jpg" alt="Sundial - From Shazammo!">
-    <div><h5>Sundial - From Shazammo!</h5></div>
-  </button>
-    
-          <button class="video-btn" data-video-id="lU-6TplYI_0">
-    <img src="https://img.youtube.com/vi/lU-6TplYI_0/hqdefault.jpg" alt="MySpace Tom">
-    <div><h5>MySpace Tom: An overview</h5></div>
-  </button>
-  
-          <button class="video-btn" data-video-id="PuM3A2DTFgA">
-    <img src="https://img.youtube.com/vi/PuM3A2DTFgA/hqdefault.jpg" alt="Dylan Teh Grunt">
-    <div><h5>Dylan Teh Grunt</h5></div>
-  </button>
-  
-        <button class="video-btn" data-video-id="-zt79VUMpVg">
-    <img src="https://img.youtube.com/vi/-zt79VUMpVg/hqdefault.jpg" alt="The Burro Song">
-    <div><h5>The Burro Song</h5></div>
-  </button>
-
 
 </div>
-
