--- a/public/media/other/index.html
+++ b/public/media/other/index.html
@@ -617,6 +617,11 @@
     <img src="https://img.youtube.com/vi/mVqJANWmh-Y/hqdefault.jpg">
     <div><h5>Sola Saminare</h5></div>
   </button>
+  
+            <button class="video-btn" data-video-id="84c5bd06-de5e-4f90-84ad-7d8db3bb5cd8" data-platform="dtube">
+    <img src="https://media.d.tube/frames/84c5bd06-de5e-4f90-84ad-7d8db3bb5cd8/4.jpg">
+    <div> <h5>Glados Sings Junk</h5></div>
+  </button>  
 
     <button class="video-btn" data-video-id="zXPCqPOe-bw">
     <img src="https://img.youtube.com/vi/zXPCqPOe-bw/hqdefault.jpg">
@@ -876,6 +881,100 @@
               <div class="col-12 d-inline-block pr-4">
                 <style>
   /* Grid Layout: 
+     - 2 column on mobile
+     - 2 columns on tablets
+     - 4 columns on desktop 
+     - No external Bootstrap required (Theme Safe)
+  */
+  .starter-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+    margin-top: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    .starter-grid { grid-template-columns: repeat(2, 1fr); }
+  }
+
+  @media (min-width: 1024px) {
+    .starter-grid { grid-template-columns: repeat(4, 1fr); }
+  }
+
+  /* Button Styling */
+  .video-btn {
+    width: 100%;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    border-radius: 8px;
+    overflow: hidden;
+    background: #212529; /* Dark background to match dark mode */
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+    transition: transform 0.2s;
+  }
+
+  .video-btn:hover {
+    transform: scale(1.02);
+  }
+
+  .video-btn img {
+    width: 100%;
+    display: block;
+    height: auto;
+  }
+
+  .video-btn div {
+    padding: 1rem;
+    text-align: left;
+    color: white;
+  }
+
+  .video-btn h5 {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+
+
+</style>
+
+
+<body> <h2 class="mb-4">UNFINISHED</h2> </body>
+
+<div class="starter-grid">
+
+    <button class="video-btn" data-video-id="c8ad15b7-9ede-49a4-802a-ce1244296762" data-platform="dtube">
+    <img src="https://media.d.tube/frames/c8ad15b7-9ede-49a4-802a-ce1244296762/1.jpg">
+    <div> <h5>Unfinished Skyrim Sketch</h5></div>
+  </button>
+      <button class="video-btn" data-video-id="30d50303-4fb7-4081-ba80-89869f074ec7" data-platform="dtube">
+    <img src="https://media.d.tube/frames/30d50303-4fb7-4081-ba80-89869f074ec7/3.jpg">
+    <div> <h5>Unfinished Grant & Gront Sequel</h5></div>
+  </button>
+  
+  
+
+</div>
+              </div>
+            </div>
+
+
+          </div>
+        </li>
+        
+        <li class="col-12 d-flex width-full py-4 border-bottom color-border-secondary public source">
+          <div class="col-12 d-inline-block">
+            <div class="d-inline-block mb-1">
+              <h3 class="wb-break-all">
+                <a href="/media/other/other06/"></a>
+              </h3>
+            </div>
+
+            <div>
+              <div class="col-12 d-inline-block pr-4">
+                <style>
+  /* Grid Layout: 
      - 1 column on mobile
      - 2 columns on tablets
      - 4 columns on desktop 
@@ -959,7 +1058,7 @@
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
-                <a href="/media/other/other06/"></a>
+                <a href="/media/other/other07/"></a>
               </h3>
             </div>
 
