--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Shippiddge.com" />
 <meta name="twitter:description"
-  content="Starter Squad, Smashtasm, Sonic Logic, and more~ Accumulating nostalgia since 2006." />
+  content="Starter Squad, Smashtasm, and more. Generating nostalgia since 2006." />
 <meta name="twitter:site" content="/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
@@ -42,7 +42,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Shippiddge.com">
 <meta property="og:description"
-  content="Starter Squad, Smashtasm, Sonic Logic, and more~ Accumulating nostalgia since 2006." />
+  content="Starter Squad, Smashtasm, and more. Generating nostalgia since 2006." />
 <meta property="og:url" content="/" />
 <meta property="og:site_name" content="Shippiddge.com" />
 <meta property="og:image"
@@ -178,7 +178,7 @@
         </div>
 
         <div class="p-note user-profile-bio mb-3 js-user-profile-bio f4" style="font-family: 'Courier'">
-          <div>Starter Squad, Smashtasm, Sonic Logic, and more~ Accumulating nostalgia since 2006.</div>
+          <div>Starter Squad, Smashtasm, and more. Generating nostalgia since 2006.</div>
         </div>
 
         <div class="d-flex flex-column">
