--- a/content/media/featuring/featuring03.html
+++ b/content/media/featuring/featuring03.html
@@ -58,22 +58,36 @@
 
 </style>
 
-<h3 class="mb-4">PODCASTS</h3>
+<h3 class="mb-4">LIVE ACTION</h3>
 <div class="starter-grid">
   
-      <button class="video-btn" data-video-id="-Kkl42jgilY">
-    <img src="https://img.youtube.com/vi/-Kkl42jgilY/maxresdefault.jpg" alt="Pinball City">
-    <div><h5>Pinball City <br>[voice actor]</h5></div>
+      <button class="video-btn" data-video-id="JBDT9xa3TLg">
+    <img src="https://img.youtube.com/vi/JBDT9xa3TLg/maxresdefault.jpg" alt="A Very Vargas Yom Kippur">
+    <div><h5>A Very Vargas Yom Kippur <br>[actor & editor]</h5></div>
   </button>
   
-        <button class="video-btn" data-video-id="OGYR9LkkcuA">
-    <img src="https://img.youtube.com/vi/OGYR9LkkcuA/maxresdefault.jpg" alt="The First Podcast #182 w/ Shippiddge">
-    <div><h5>The First Podcast #182 w/ Shippiddge</h5></div>
+    
+      <button class="video-btn" data-video-id="6ejK8TAQ5AY">
+    <img src="https://img.youtube.com/vi/6ejK8TAQ5AY/maxresdefault.jpg" alt="A Very Vargas Yom Kippur">
+    <div><h5>SBN3 Christmas Special <br>[actor]</h5></div>
   </button>
+  
+                <button class="video-btn" data-video-id="W5Yd8plNvoY">
+    <img src="https://img.youtube.com/vi/W5Yd8plNvoY/maxresdefault.jpg" alt="GPS">
+    <div><h5>GPS <br>[actor]</h5></div>
+  </button>
+              <button class="video-btn" data-video-id="vzkY1dayozs">
+    <img src="https://img.youtube.com/vi/vzkY1dayozs/maxresdefault.jpg" alt="Cloudwatching">
+    <div><h5>Cloudwatching <br>[actor]</h5></div>
+	
+	                <button class="video-btn" data-video-id="rdCS4SXrq7I">
+    <img src="https://img.youtube.com/vi/rdCS4SXrq7I/maxresdefault.jpg" alt="The Man Salad">
+    <div><h5>GPS <br>[voice]</h5></div>
+	
+  </button>
+  
 
-        <button class="video-btn" data-video-id="tJHsvpqlcZY">
-    <img src="https://img.youtube.com/vi/tJHsvpqlcZY/maxresdefault.jpg" alt="Mildly Familiar - Ep7">
-    <div><h5>Mildly Familiar - Shippiddge - Episode 7</h5></div>
-  </button>
+
+
 
 </div>
