--- a/content/media/featuring/featuring03.html
+++ b/content/media/featuring/featuring03.html
@@ -71,19 +71,20 @@
     <img src="https://img.youtube.com/vi/6ejK8TAQ5AY/maxresdefault.jpg" alt="A Very Vargas Yom Kippur">
     <div><h5>SBN3 Christmas Special <br>[actor]</h5></div>
   </button>
-  
-                <button class="video-btn" data-video-id="W5Yd8plNvoY">
-    <img src="https://img.youtube.com/vi/W5Yd8plNvoY/maxresdefault.jpg" alt="GPS">
-    <div><h5>GPS <br>[actor]</h5></div>
-  </button>
-              <button class="video-btn" data-video-id="vzkY1dayozs">
+
+      <button class="video-btn" data-video-id="vzkY1dayozs">
     <img src="https://img.youtube.com/vi/vzkY1dayozs/maxresdefault.jpg" alt="Cloudwatching">
     <div><h5>Cloudwatching <br>[actor]</h5></div>
+	</button>
 	
-	                <button class="video-btn" data-video-id="rdCS4SXrq7I">
+	    <button class="video-btn" data-video-id="rdCS4SXrq7I">
     <img src="https://img.youtube.com/vi/rdCS4SXrq7I/maxresdefault.jpg" alt="The Man Salad">
-    <div><h5>GPS <br>[voice]</h5></div>
-	
+    <div><h5>The Man Salad <br>[voice]</h5></div>
+	</button>
+	  
+       <button class="video-btn" data-video-id="W5Yd8plNvoY">
+    <img src="https://img.youtube.com/vi/W5Yd8plNvoY/maxresdefault.jpg" alt="GPS">
+    <div><h5>GPS <br>[actor]</h5></div>
   </button>
   
 
