--- a/content/media/featuring/featuring00.html
+++ b/content/media/featuring/featuring00.html
@@ -1,5 +1,5 @@
 <h1 style="text-align:center; font-family: 'Lucida Console'">FEATURING SHIPPIDDGE</h1>
-  <p class="mb-1"  style="text-align:center" >Various works that feature Shippiddge in the cast and/or crew.</a> </p>
+  <p class="mb-1"  style="text-align:center" >Projects that feature Shippiddge in the cast and/or crew.</a> </p>
 
 
 <!-- Big Video Player -->
