--- a/public/media/other/index.html
+++ b/public/media/other/index.html
@@ -1030,21 +1030,27 @@
     font-weight: 500;
   }
 
+
 </style>
 
-<h3 class="mb-4">Sonic X: The Repisensce Episodes (2006)</h3>A crude fandub of Sonic X. "Repisensce" is not a word.
+<h3 class="mb-4">2006 UPLOADS</h3>The first few uploads on the YouTube channel.
 <div class="starter-grid">
-
-
-    <button class="video-btn" data-video-id="9b500a15-bd96-4837-839c-be1c24afc207" data-platform="dtube">
-    <img src="https://media.d.tube/frames/9b500a15-bd96-4837-839c-be1c24afc207/2.jpg">
-    <div> <h5>Sonic X Repisensce - Ep 1</h5></div>
-  </button>
-      <button class="video-btn" data-video-id="3bda5651-186f-416d-b02f-9aaed3a3120a" data-platform="dtube">
-    <img src="https://media.d.tube/frames/3bda5651-186f-416d-b02f-9aaed3a3120a/1.jpg">
-    <div> <h5>Sonic X Repisensce - Ep 2</h5></div>
+  
+          <button class="video-btn" data-video-id="lU-6TplYI_0">
+    <img src="https://img.youtube.com/vi/lU-6TplYI_0/hqdefault.jpg" alt="MySpace Tom">
+    <div><h5>MySpace Tom: An overview</h5></div>
   </button>
   
+          <button class="video-btn" data-video-id="PuM3A2DTFgA">
+    <img src="https://img.youtube.com/vi/PuM3A2DTFgA/hqdefault.jpg" alt="Dylan Teh Grunt">
+    <div><h5>Dylan Teh Grunt</h5></div>
+  </button>
+  
+        <button class="video-btn" data-video-id="-zt79VUMpVg">
+    <img src="https://img.youtube.com/vi/-zt79VUMpVg/hqdefault.jpg" alt="The Burro Song">
+    <div><h5>The Burro Song</h5></div>
+  </button>
+
 
 </div>
               </div>
@@ -1121,27 +1127,21 @@
     font-weight: 500;
   }
 
-
 </style>
 
-<h3 class="mb-4">2006 UPLOADS</h3>
+<h3 class="mb-4">Sonic X: The Repisensce Episodes (2006)</h3>A crude fandub of Sonic X. "Repisensce" is not a word.
 <div class="starter-grid">
-  
-          <button class="video-btn" data-video-id="lU-6TplYI_0">
-    <img src="https://img.youtube.com/vi/lU-6TplYI_0/hqdefault.jpg" alt="MySpace Tom">
-    <div><h5>MySpace Tom: An overview</h5></div>
-  </button>
-  
-          <button class="video-btn" data-video-id="PuM3A2DTFgA">
-    <img src="https://img.youtube.com/vi/PuM3A2DTFgA/hqdefault.jpg" alt="Dylan Teh Grunt">
-    <div><h5>Dylan Teh Grunt</h5></div>
-  </button>
-  
-        <button class="video-btn" data-video-id="-zt79VUMpVg">
-    <img src="https://img.youtube.com/vi/-zt79VUMpVg/hqdefault.jpg" alt="The Burro Song">
-    <div><h5>The Burro Song</h5></div>
-  </button>
 
+
+    <button class="video-btn" data-video-id="9b500a15-bd96-4837-839c-be1c24afc207" data-platform="dtube">
+    <img src="https://media.d.tube/frames/9b500a15-bd96-4837-839c-be1c24afc207/2.jpg">
+    <div> <h5>Sonic X Repisensce - Ep 1</h5></div>
+  </button>
+      <button class="video-btn" data-video-id="3bda5651-186f-416d-b02f-9aaed3a3120a" data-platform="dtube">
+    <img src="https://media.d.tube/frames/3bda5651-186f-416d-b02f-9aaed3a3120a/1.jpg">
+    <div> <h5>Sonic X Repisensce - Ep 2</h5></div>
+  </button>
+  
 
 </div>
               </div>
