--- a/content/media/other/other03.html
+++ b/content/media/other/other03.html
@@ -60,6 +60,11 @@
 <h3 class="mb-4">UPDATES/ANNOUNCEMENTS</h3>
 <div class="starter-grid">
 
+    <button class="video-btn" data-video-id="HguwgeGv4Ng">
+    <img src="https://img.youtube.com/vi/HguwgeGv4Ng/hqdefault.jpg">
+    <div><h5>2026 Update</h5></div>
+  </button>
+
     <button class="video-btn" data-video-id="a0WO9o7AtW4">
     <img src="https://img.youtube.com/vi/a0WO9o7AtW4/hqdefault.jpg">
     <div><h5>Starter Squad Virtual Panel Announcement</h5></div>
