--- a/public/media/featuring/index.html
+++ b/public/media/featuring/index.html
@@ -118,20 +118,7 @@
     About
   </a>
 </nav>
-          <div class="profile-color-modes js-promo-color-modes-banner-profile isInitialToggle">
-            
-            <span class="profile-color-modes-toggle js-promo-color-modes-toggle no-select" tabindex="0" onclick="switchTheme()" style="margin-top: -48px;">
-              <div class="profile-color-modes-toggle-track no-select"></div>
-              <div class="profile-color-modes-toggle-thumb js-promo-color-modes-thumb">
-                <svg style="fill: var(--color-profile-color-modes-toggle-moon); margin: 7px 0 0 7px;" width="14"
-                  height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M4.52208 7.71754C7.5782 7.71754 10.0557 5.24006 10.0557 2.18394C10.0557 1.93498 10.0392 1.68986 10.0074 1.44961C9.95801 1.07727 10.3495 0.771159 10.6474 0.99992C12.1153 2.12716 13.0615 3.89999 13.0615 5.89383C13.0615 9.29958 10.3006 12.0605 6.89485 12.0605C3.95334 12.0605 1.49286 10.001 0.876728 7.24527C0.794841 6.87902 1.23668 6.65289 1.55321 6.85451C2.41106 7.40095 3.4296 7.71754 4.52208 7.71754Z">
-                  </path>
-                </svg>
-              </div>
-            </span>
-          </div>
+
         </div>
       </div>
     </div>
@@ -980,23 +967,18 @@ window.onscroll = function (e) {
   }
 };
 
-var style = localStorage.getItem('data-color-mode')
-githubIconElement = document.getElementById('github-icon')
-twitterIconElement = document.getElementById('twitter-icon')
-if (style == 'light') {
-  if (githubIconElement) githubIconElement.setAttribute('fill', '#24292e')
-  if (twitterIconElement) twitterIconElement.setAttribute('fill', 'black')
+
+var githubIconElement = document.getElementById('github-icon');
+var twitterIconElement = document.getElementById('twitter-icon');
+if (githubIconElement) {
+  githubIconElement.removeAttribute('fill');
+  githubIconElement.setAttribute('class', 'octicon');
+  githubIconElement.setAttribute('color', '#f0f6fc');
 }
-else {
-  if (githubIconElement) {
-    githubIconElement.removeAttribute('fill')
-    githubIconElement.setAttribute('class', 'octicon')
-    githubIconElement.setAttribute('color', '#f0f6fc')
-  }
-  if (twitterIconElement)  twitterIconElement.setAttribute('fill', 'white') 
+if (twitterIconElement) {
+  twitterIconElement.setAttribute('fill', 'white');
 }
 </script>
-
   
 
 </div>
