--- a/public/media/index.html
+++ b/public/media/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href='https://www.shippiddge.com/css/light.css' />
     <link rel="stylesheet" href='https://www.shippiddge.com/css/dark.css' />
     <link rel="stylesheet" href='https://www.shippiddge.com/css/syntax.css' />
-    <title>Starter Squad Dubbing Pack - Shippiddge.com</title>
+    <title>Media - Shippiddge.com</title>
     
     <link rel="icon" type="image/x-icon" href='/images/shipp112.png'>
     
@@ -25,11 +25,11 @@
 <meta name="keywords"
   content='' />
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://www.shippiddge.com/startersquad/dubbing/" />
+<link rel="canonical" href="https://www.shippiddge.com/media/" />
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Starter Squad Dubbing Pack - Shippiddge.com" />
+<meta name="twitter:title" content="Media - Shippiddge.com" />
 <meta name="twitter:description"
   content="" />
 <meta name="twitter:site" content="https://www.shippiddge.com/" />
@@ -39,11 +39,11 @@
 
 
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Starter Squad Dubbing Pack - Shippiddge.com">
+<meta property="og:title" content="Media - Shippiddge.com">
 <meta property="og:description"
   content="" />
-<meta property="og:url" content="https://www.shippiddge.com/startersquad/dubbing/" />
-<meta property="og:site_name" content="Starter Squad Dubbing Pack" />
+<meta property="og:url" content="https://www.shippiddge.com/media/" />
+<meta property="og:site_name" content="Media" />
 <meta property="og:image"
   content="https://www.shippiddge.com/">
 <meta property="og:image:width" content="2048">
@@ -52,7 +52,7 @@
 
 
 
-<link href="/startersquad/dubbing/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge.com" />
+<link href="/media/index.xml" rel="alternate" type="application/rss+xml" title="Shippiddge.com" />
 
 
 
@@ -99,7 +99,7 @@
     </svg>
     Starter Squad
   </a>
-      <a class="UnderlineNav-item " href="https://www.shippiddge.com/media/">
+      <a class="UnderlineNav-item  selected " href="https://www.shippiddge.com/media/">
     <svg class="octicon octicon-play UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm4.879-2.773 4.264 2.559a.25.25 0 0 1 0 .428l-4.264 2.559A.25.25 0 0 1 6 10.559V5.442a.25.25 0 0 1 .379-.215Z"></path>
     </svg>
@@ -278,7 +278,7 @@
     Starter Squad
   </a>
   
-      <a class="UnderlineNav-item " href="https://www.shippiddge.com/media/">
+      <a class="UnderlineNav-item  selected " href="https://www.shippiddge.com/media/">
     <svg class="octicon octicon-play UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
       <path fill-rule="evenodd" d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm4.879-2.773 4.264 2.559a.25.25 0 0 1 0 .428l-4.264 2.559A.25.25 0 0 1 6 10.559V5.442a.25.25 0 0 1 .379-.215Z"></path>
     </svg>
@@ -315,46 +315,97 @@
           <div class="col-12 d-inline-block">
             <div class="d-inline-block mb-1">
               <h3 class="wb-break-all">
-                <a href="https://www.shippiddge.com/startersquad/dubbing/dubbing00/"></a>
+                <a href="https://www.shippiddge.com/media/media/"></a>
               </h3>
             </div>
 
             <div>
               <div class="col-12 d-inline-block pr-4">
-                <img src="/images/squaddub.png"  style="max-width:100%">
-<body style="text-align:center">
-<br><br><h4>Want to dub Starter Squad into another language?  This should help!</h4>
-<br>This pack features each Episode without a dialogue track and its accompanying script.  
-<br>(Note that the final dialogue mix sometimes differs from the original script.)
-<br>You are free to dub and upload these with your own audio added.
-<br>Just be sure to credit me (Shippiddge) and link to my YouTube channel (Youtube.com/Shippiddge).
-<br>
-</body>
+                <style>
+  .starter-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.1rem;
+    margin-top: 2rem;
+  }
+
+  @media (min-width: 768px) {
+    .starter-grid { grid-template-columns: repeat(4, 1fr); }
+  }
+
+  @media (min-width: 1024px) {
+    .starter-grid { grid-template-columns: repeat(4, 1fr); }
+  }
+
+  .video-btn {
+    width: 100%;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    border-radius: 8px;
+    overflow: hidden;
+    background: #212529;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+    transition: transform 0.2s;
+    text-decoration: none;
+    display: block;
+  }
+
+  .video-btn:hover {
+    transform: scale(1.05);
+  }
+
+  .video-btn img {
+    width: 100%;
+    display: block;
+    height: auto;
+  }
+</style>
 
 
-<body><h3 class="mt-5 mb-1" style="font-family: 'Lucida Console'">
-<a href="https://drive.google.com/file/d/1CcvDyMPo4rfoFxaDaIz3ZdeJ_fi292Jr/view?usp=sharing">Episode 1 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1zcSmhlXlOMOON6jSYfLqevE6UNNJ6onv/view?usp=sharing">Episode 1 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/164CL3HrS2iIyl7UDQW0LI5ljh6_VV5Xq/view?usp=sharing">Episode 2 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1AkTimqKn3cchuEzwjAttJw4tYvV0Cxnx/view?usp=sharing">Episode 2 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1HPE4_Sxkxxh4FUFoR71OdD4WbhrwUrkr/view?usp=sharing">Episode 3 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1hF_2hwQHXdLyFfEvoHukRZbpY5BaG0AS/view?usp=sharing">Episode 3 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1VvTCpCLLhM_sraE6qr3eyWglQbgoTANZ/view?usp=sharing">Episode 4 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1fOQssOut0qqioqfdlh_Dfh9VfnfjJBm3/view?usp=sharing">Episode 4 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1Bg8H-RSNzLYie7485vwY5oegItqSJscm/view?usp=sharing">Episode 5 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1kF4DIGdxxNxs8-boeQgETC4Br-K0rsOf/view?usp=sharing">Episode 5 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1_OApmO5nelSoQYu_iu4A98x0b-tWEHj_/view?usp=sharing">Episode 6 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/11hDg-UlI0-NhL7I4SiKlR-R-01Yqshls/view?usp=sharing">Episode 6 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1XUZ54jFBvLjVvRNak0p4dzUd_T62Jpfg/view?usp=sharing">Episode 7 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/16AMsP9nMWdLbhFcKIEYaU1YXqfc2YkSS/view?usp=sharing">Episode 7 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1WAREgO36SkfgsaPqXTC7dJwxaCWX8JIy/view?usp=sharing">Episode 8 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1TaTevstUmNC2XdOnLEH2WMMnNgkOqXX5/view?usp=sharing">Episode 8 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1muHcpgaVQjpOG8yGbErRaN6NskxfTf1E/view?usp=sharing">Episode 9 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1qMN8m9NbgEfJZZLssDch6omYPUH3Gs1w/view?usp=sharing">Episode 9 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1oEhIhX_roVp0y4H3J3fngSKsYFIJ-dxV/view?usp=sharing">Episode 10 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1Z-_EugnwSLqVmqe3DONZA6GFtjTow4FY/view?usp=sharing">Episode 10 Script</a>
-<br><br>
-<a href="https://drive.google.com/file/d/1Cm3no6yXQNq0Na8HiO1JzqwLfdQFCUjy/view?usp=sharing">Episode 11 (NO VOICE)</a> >>> <a href="https://drive.google.com/file/d/1M1bgkyHSkGyc69404g02QTIkQgBo8SH5/view?usp=sharing">Episode 11 Script</a>
-<h3></body>
+<div class="starter-grid">
+
+<button type="button" class="video-btn" onclick="window.location.href='/startersquad'">
+  <img src="/images/buttons/startersquad_button.png">
+  <div><h4 class="m-2">STARTER SQUAD</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/animation'">
+  <img src="/images/buttons/animation_button.png">
+  <div><h4 class="m-2">ANIMATION</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/liveaction'">
+  <img src="/images/buttons/liveaction_button.png">
+  <div><h4 class="m-2">LIVE ACTION</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/machinima'">
+  <img src="/images/buttons/machinima_button.png">
+  <div><h4 class="m-2">MACHINIMA</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/featuring'">
+  <img src="/images/buttons/featuring_button.png">
+  <div><h4 class="m-2">FEATURING SHIPPIDDGE</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/art'">
+  <img src="/images/buttons/art_button.png">
+  <div><h4 class="m-2">ART</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/comics'">
+  <img src="/images/buttons/comics_button.png">
+  <div><h4 class="m-2">COMICS</h4></div>
+</button>
+
+<button type="button" class="video-btn" onclick="window.location.href='/media/other'">
+  <img src="/images/buttons/other_button.png">
+  <div><h4 class="m-2">OTHER</h4></div>
+</button>
+
+</div>
               </div>
             </div>
 
