--- a/content/media/media.html
+++ b/content/media/media.html
@@ -45,42 +45,42 @@
 
 <button type="button" class="video-btn" onclick="window.location.href='/startersquad'">
   <img src="/images/buttons/startersquad_button.png">
-  <div><h4 class="m-2">STARTER SQUAD</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">STARTER SQUAD</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/animation'">
   <img src="/images/buttons/animation_button.png">
-  <div><h4 class="m-2">ANIMATION</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">ANIMATION</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/liveaction'">
   <img src="/images/buttons/liveaction_button.png">
-  <div><h4 class="m-2">LIVE ACTION</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">LIVE ACTION</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/machinima'">
   <img src="/images/buttons/machinima_button.png">
-  <div><h4 class="m-2">MACHINIMA</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">MACHINIMA</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/featuring'">
   <img src="/images/buttons/featuring_button.png">
-  <div><h4 class="m-2">FEATURING SHIPPIDDGE</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">FEATURING SHIPPIDDGE</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/art'">
   <img src="/images/buttons/art_button.png">
-  <div><h4 class="m-2">ART</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">ART</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/comics'">
   <img src="/images/buttons/comics_button.png">
-  <div><h4 class="m-2">COMICS</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">COMICS</h4></div>
 </button>
 
 <button type="button" class="video-btn" onclick="window.location.href='/media/other'">
   <img src="/images/buttons/other_button.png">
-  <div><h4 class="m-2">OTHER</h4></div>
+  <div><h4 class="m-2" style="color: #ffffff;">OTHER</h4></div>
 </button>
 
 </div>
